Fix h2 and h3 heading sizes - make them visible and readable
- h2 now uses heading-scale-2 (~36px mobile, ~44px desktop)
- h3 uses 140% of body size
- Both are bold and fully opaque (not dim)
- h4-h6 still use sub-heading mixin for smaller text
- Better visual hierarchy in blog posts

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -305,12 +305,26 @@ html {
     }
   }
 
-  h2,
-  h3,
+  h2 {
+    margin: 10vmin 0 1rem;
+    font-size: var(--heading-scale-2);
+    font-weight: bold;
+    opacity: 1;
+    line-height: 1.2;
+  }
+
+  h3 {
+    margin: 8vmin 0 1rem;
+    font-size: 140%;
+    font-weight: bold;
+    opacity: 0.9;
+    line-height: 1.3;
+  }
+
   h4,
   h5,
   h6 {
-    margin: 10vmin 0 1rem;
+    margin: 6vmin 0 1rem;
     @include sub-heading();
   }
 
